spade-tests/src/snapshots/spade_tests__ast_lowering__non_ports_can_not_contain_tuple_ports.snap
---
source: spade-tests/src/ast_lowering.rs
expression: "std::str::from_utf8(buffer.as_slice()).expect(\"error contains invalid utf-8\")"
---
error: Port in non-port struct
  ┌─ testinput:2:8
  │
1 │ struct A {
  │        - This is not a port struct
2 │     x: (&int<32>, &bool)
  │        ^^^^^^^^^^^^^^^^^ This is a port
  │
  = Consider making A a port struct
  │
1 │ struct port A {
  │        +++++


